--- a/src/app/components/noticias/noticias.component.html
+++ b/src/app/components/noticias/noticias.component.html
@@ -1,21 +1,32 @@
 <section>
-    <h2>Formulario de Publicación</h2>
-    <form (submit)="guardar()">
+    <h1>Formulario de Noticias</h1>
+    <!-- Formulario para agregar noticias -->
+    <form (ngSubmit)="guardar()">
       <label for="titulo">Título:</label>
-      <input type="text" id="titulo" name="titulo" [(ngModel)]="newNoticias.titulo" required><br>
+      <input type="text" id="titulo" name="titulo" [(ngModel)]="newNoticias.titulo" required><br><br>
+  
       <label for="imagen">URL de la imagen:</label>
-      <input type="text" id="imagen" name="imagen" [(ngModel)]="newNoticias.imagen" required><br>
+      <input type="text" id="imagen" name="imagen" [(ngModel)]="newNoticias.imagen" required><br><br>
+  
       <label for="texto">Texto:</label>
-      <textarea id="texto" name="texto" [(ngModel)]="newNoticias.texto" required></textarea><br>
+      <textarea id="texto" name="texto" [(ngModel)]="newNoticias.texto" required></textarea><br><br>
+  
       <label for="fecha">Fecha:</label>
-      <input type="date" id="fecha" name="fecha" [(ngModel)]="newNoticias.fecha" required><br>
-      <button type="submit">Publicar</button>
+      <input type="date" id="fecha" name="fecha" [(ngModel)]="newNoticias.fecha" required><br><br>
+  
+      <button type="submit">Guardar</button>
     </form>
   
     <hr>
   
+    <!-- Lista de noticias -->
     <h2>Lista de Noticias</h2>
     <div *ngFor="let noticia of arrNoticias">
-      <p>{{ noticia.titulo }} - {{ noticia.imagen }} - {{ noticia.texto }} - {{ noticia.fecha }}</p>
+      <h3>{{ noticia.titulo }}</h3>
+      <img [src]="noticia.imagen" alt="{{ noticia.titulo }}">
+      <p>{{ noticia.texto }}</p>
+      <p>Fecha de publicación: {{ noticia.fecha }}</p>
+      <hr>
     </div>
   </section>
+  
