--- a/src/app/components/noticias/noticias.component.css
+++ b/src/app/components/noticias/noticias.component.css
@@ -2,7 +2,37 @@
 .seccion {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.class{
+.formulario {
     border-radius: 10px;
-    
+    padding-left: 40px;
+    padding-bottom: 40px;
+    padding-right: 40px;
+    padding-top: 40px;
+    box-shadow: grey;
+   
+}
+
+.respuestas {
+    border-radius: 10px;
+    padding-left: 40px;
+    padding-bottom: 40px;
+    padding-right: 40px;
+    padding-top: 40px;
+       
+}
+
+.boton-guardar {
+
+}
+
+.rojo {
+    background-color: tomato;
+}
+
+.azul{
+    background-color: aqua;
+}
+
+.violeta {
+    background-color: violet;
 }
