--- a/src/app/components/noticias/noticias.component.css
+++ b/src/app/components/noticias/noticias.component.css
@@ -1,27 +1,44 @@
 
 .seccion {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0 60px;
+    border-bottom: 1px solid var(--gray-300);
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 30px;
+    padding-right: 30px;
+   
 }
 .formulario {
-    border-radius: 10px;
-    padding-left: 40px;
-    padding-bottom: 40px;
-    padding-right: 40px;
-    padding-top: 40px;
-    box-shadow: grey;
-   
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-shadow: 0 3px 5px grey;
+    border-radius: 10px solid var(--gray-300);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 300px;
+
+      
 }
 
 .respuestas {
-    border-radius: 10px;
-    padding-left: 40px;
-    padding-bottom: 40px;
-    padding-right: 40px;
-    padding-top: 40px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
        
 }
 
 .boton-guardar {
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    
+
+}
+
+.alert {
+    background-color: red;
+    font-size: smaller;
+    padding-right: 300px;
 
 }
 
