--- a/src/app/components/noticias/noticias.component.html
+++ b/src/app/components/noticias/noticias.component.html
@@ -1,21 +1,30 @@
 <section>
-  <h1>Formulario de Noticias</h1>
   <div class="formulario">
+    <h1>Formulario de Noticias</h1>
     <div>
       <label for="titulo">Título:</label>
-      <input type="text" id="titulo" placeholder="introduce titulo" [(ngModel)]="newNoticia.titulo">
+      <input type="text" id="titulo" placeholder="introduce titulo" [(ngModel)]="newNoticia.titulo" required #titulo="ngModel">
+    
+      <div class="alert alert-danger mt2" [hidden]="titulo.valid || titulo.pristine">Este campo es obligatorio</div>
+
     </div>
     <div>
       <label for="imagen">URL de la imagen:</label>
-      <input type="text" id="imagen" placeholder="url imagen" [(ngModel)]="newNoticia.imagen">
+      <input type="text" id="imagen" placeholder="url imagen" [(ngModel)]="newNoticia.imagen" required #imagen="ngModel">
+    
+      <div class="alert alert-danger mt2" [hidden]="imagen.valid || imagen.pristine">Este campo es obligatorio</div>
     </div>
     <div>
       <label for="texto">Texto:</label>
-      <input id="texto" placeholder="introducir texto" [(ngModel)]="newNoticia.texto">
+      <input id="texto" placeholder="introducir texto" [(ngModel)]="newNoticia.texto" required #texto="ngModel">
+    
+      <div class="alert alert-danger mt2" [hidden]="texto.valid || texto.pristine">Este campo es obligatorio</div>
     </div>
     <div>
       <label for="fecha">Fecha de publicación:</label>
-      <input type="date" id="fecha" name="fecha" [(ngModel)]="newNoticia.fecha">
+      <input type="date" id="fecha" name="fecha" [(ngModel)]="newNoticia.fecha" required #edad="ngModel">
+    
+      <div class="alert alert-danger mt2" [hidden]="edad.valid || edad.pristine">Este campo es obligatorio</div>
     </div>
     <button class="{{ color }}" (click)="guardar()">Guardar</button>
   </div>
